packages/rspack-test-tools/tests/configCases/errors/module-trace/test.config.js
module.exports = {
  findBundle: function () {
    return [];
  }
};
